allprojects {
	apply plugin: 'java-library'
	apply plugin: 'application'

	repositories {
		flatDir {
			dirs 'libs'
		}
		mavenCentral()
	}

	java {
		withSourcesJar()
		toolchain {
			languageVersion = JavaLanguageVersion.of(21)
		}
	}
}

subprojects {
	sourceSets {
		main {
			java.srcDir 'src'
			resources.srcDir 'resources'
		}
	}
	dependencies {
		compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
		annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
		implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
		implementation group: 'it.unimi.dsi', name: 'fastutil', version: '8.5.13'
		implementation group: 'com.google.guava', name: 'guava', version: '33.2.0-jre'
		implementation group: 'commons-io', name: 'commons-io', version: '2.15.1'
		implementation group: 'org.jetbrains', name: 'annotations', version:'24.1.0'
		annotationProcessor group: 'org.jetbrains', name: 'annotations', version:'24.1.0'

		implementation fileTree(dir: 'libs', include: '*.jar')
	}
}

/*tasks.register('uber', Jar) {
	classifier = 'uber'
	group = 'custom'

	manifest.from jar.manifest

	from {
		duplicatesStrategy 'exclude'
		configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
	} {
		exclude "java/*"
		exclude "javax/*"
		exclude "META-INF/*.SF"
		exclude "META-INF/*.DSA"
		exclude "META-INF/*.RSA"
	}
	with jar
}

tasks.register('sources', Jar) {
	classifier = 'sources'
	group = 'custom'

	manifest.from jar.manifest
	from sourceSets.main.allSource

	with jar
}

def key = "";

tasks.register('move', Copy) {
	group = 'custom'

	delete 'run/' + project.name + '-' + key + '.jar'

	from layout.buildDirectory.file('libs/' + project.name + '-' + key + '.jar')
	into "run"
}

tasks.register('doneUber', Jar) {
	group = 'custom'

	key = 'uber'

	finalizedBy 'doneRun'
}

tasks.register('doneSources', Jar) {
	group = 'custom'

	key = 'sources'

	finalizedBy 'doneRun'
}

tasks.register('doneRun', Jar) {
	group = 'custom'

	dependsOn key
	finalizedBy 'move'
}*/